--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -57,6 +57,13 @@
                 android:gravity="top|left"
                 android:maxLines="10"
                 android:hint="keterangan"/>
+            
+            <EditText
+                android:id="@+id/edit_tanggal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:hint="Tanggal" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
