--- a/app/src/main/res/layout/list_kas.xml
+++ b/app/src/main/res/layout/list_kas.xml
@@ -11,6 +11,7 @@
         android:visibility="gone"/>
 
     <TextView
+        android:id="@+id/text_jumlah"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100.000"
